--- a/src/index.html
+++ b/src/index.html
@@ -51,17 +51,13 @@
             <div class="top_nav">
                 <div class="container">
                     <ul class="list-inline info">
-                        <li><a href="#"><span class="fa fa-phone"></span> +54 9 11 2620 2093 </a></li>
-                        <li><a href="#"><span class="fa fa-envelope"></span> admin@bonairex.com</a></li>
+                        <li><a href="#"><span class="fa fa-phone"></span> +54 9 11 2255 7282 </a></li>
+                        <li><a href="mailto:info@bonairex.com"><span class="fa fa-envelope"></span> info@bonairex.com</a></li>
                         <li><a href="#"><span class="fa fa-clock-o"></span> Lun - Sab 9:00 - 19:00</a></li>
                     </ul>
                     <ul class="list-inline social_icon">
                         <li><a href=""><span class="fa fa-facebook"></span></a></li>
-                        <li><a href=""><span class="fa fa-twitter"></span></a></li>
-                        <li><a href=""><span class="fa fa-behance"></span></a></li>
-                        <li><a href=""><span class="fa fa-dribbble"></span></a></li>
-                        <li><a href=""><span class="fa fa-linkedin"></span></a></li>
-                        <li><a href=""><span class="fa fa-youtube"></span></a></li>
+                        <li><a href=""><span class="fa fa-instagram"></span></a></li>
                     </ul>			
                 </div>
             </div><!-- Top Navbar end -->
@@ -391,10 +387,7 @@
 
                             <ul class="list-inline footer_social_icon">
                                 <li><a href=""><span class="fa fa-facebook"></span></a></li>
-                                <li><a href=""><span class="fa fa-twitter"></span></a></li>
-                                <li><a href=""><span class="fa fa-youtube"></span></a></li>
-                                <li><a href=""><span class="fa fa-google-plus"></span></a></li>
-                                <li><a href=""><span class="fa fa-linkedin"></span></a></li>
+                                <li><a href=""><span class="fa fa-instagram"></span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -426,8 +419,9 @@
                             <h4>Contactanos</h4>
                             <ul class="list-unstyled footer_contact">
                                 <li><a href=""><span class="fa fa-map-marker"></span> Florida 15 oficina 5º9, CABA, Argentina</a></li>
-                                <li><a href=""><span class="fa fa-envelope"></span> admin@bonairex.com</a></li>
-                                <li><a href=""><span class="fa fa-mobile"></span><p> +54 9 11 2620 2093</p></a></li>
+                                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8571305096475!2d-58.37693564942265!3d-34.60777406512334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad255c46f55%3A0x32f55606c050b598!2sFlorida%2015%2C%20C1005AAA%20CABA!5e0!3m2!1ses-419!2sar!4v1568298537293!5m2!1ses-419!2sar" width="600" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe></li>
+                                <li><a href="mailto:info@bonairex.com"><span class="fa fa-envelope"></span> info@bonairex.com</a></li>
+                                <li><a href=""><span class="fa fa-mobile"></span><p> +54 9 11 2255 7282</p></a></li>
                             </ul>
                         </div>
                     </div>
